tests/lang/compile_fail/type_mismatch.expo
fn add(a: Int32, b: Int32) -> Int32
  a + b
end

fn main
  add("hello", "world")
end
